<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        layout="@layout/activity_maps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.60"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSitioUno"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:tag="0"
            android:text="@string/button_Muralla"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonSitioDos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:tag="1"
            android:text="@string/button_TorrePisa"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSitioTres"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:tag="2"
            android:text="@string/button_BigBen"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonSitioCuatro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="onClick"
            android:tag="3"
            android:text="@string/button_PiramideGiza"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSitioCinco"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:tag="4"
            android:onClick="onClick"
            android:text="@string/button_Torreeiffel"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonSitioSeis"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:tag="5"
            android:onClick="onClick"
            android:text="@string/button_Teotihuacan"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSitioSiete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@color/colorPrimary"
            android:tag="6"
            android:text="@string/button_Niagara"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonSitioOcho"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:tag="7"
            android:onClick="onClick"
            android:text="@string/button_Canon"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>